version-23.1/manage/kubernetes/networking/configure-listeners.mdx
---
title: Configure Listeners in Kubernetes
tags:
  - Kubernetes
  - Helm configuration
description: Customize the advertised ports for each listener on all Redpanda brokers, or disable listeners altogether.
linkRoot: ../../../../
deployment: Kubernetes
contextLinks:
  - name: 'Linux'
    to: manage/security/listener-configuration
  - name: 'Kubernetes'
    to: 'manage/kubernetes/networking/configure-listeners'
---

<head>
    <meta name="title" content="Configure Listeners in Kubernetes | Redpanda Docs"/>
    <meta name="description" content="Customize the advertised ports for each listener on all Redpanda brokers, or disable listeners altogether."/>
    <link rel="canonical" href="https://docs.redpanda.com/docs/manage/kubernetes/networking/configure-listeners/" />
</head>

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import ValuesYaml from '../shared/_values-yaml.mdx'
import ContextLink from '@site/src/components/ContextButton.js'

<ContextLink frontmatter={frontMatter}
/>

You can customize the advertised ports for each listener on all Redpanda brokers, or disable listeners altogether.

### Customize the advertised ports

To customize the advertised ports for each listener, replace `<port>` with the port that you want to use.

:::note
Redpanda doesn’t validate the configured port numbers. Make sure to verify the following:

- Your configured port numbers are within the range that is assigned for node ports in your Kubernetes cluster.
- Your Kubernetes cluster is accessible through your desired node port range. You may need to edit your inbound firewall rules.
- Your configured port numbers are not in use by any other service.
:::

<Tabs groupId="listeners">
<TabItem value="admin" label="Admin API" default>

  <Tabs groupId="helm-config">
  <TabItem value="values" label="--values">

  ```yaml title="custom-admin-port.yaml"
  listeners:
    admin:
      external:
        default:
          advertisedPorts:
          - <port>
  ```

  ```bash
  helm upgrade --install redpanda redpanda/redpanda -n redpanda --create-namespace \
    --values custom-admin-port.yaml --reuse-values
  ```

  </TabItem>
  <TabItem value="flags" label="--set">

  ```bash
  helm upgrade --install redpanda redpanda/redpanda -n redpanda --create-namespace \
    --set "listeners.admin.external.default.advertisedPorts={<port>}"
  ```

  </TabItem>
  </Tabs>

</TabItem>
<TabItem value="kafka" label="Kafka API">

  <Tabs groupId="helm-config">
  <TabItem value="values" label="--values">

  ```yaml title="custom-kafka-port.yaml"
  listeners:
    kafka:
      external:
        default:
          advertisedPorts:
          - <port>
  ```

  ```bash
  helm upgrade --install redpanda redpanda/redpanda -n redpanda --create-namespace \
    --values custom-kafka-port.yaml --reuse-values
  ```

  </TabItem>
  <TabItem value="flags" label="--set">

  ```bash
  helm upgrade --install redpanda redpanda/redpanda -n redpanda --create-namespace \
    --set "listeners.kafka.external.default.advertisedPorts={<port>}"
  ```

  </TabItem>
  </Tabs>

</TabItem>
<TabItem value="proxy" label="HTTP Proxy">

  <Tabs groupId="helm-config">
  <TabItem value="values" label="--values">

  ```yaml title="custom-pandaproxy-port.yaml"
  listeners:
    http:
      external:
        default:
          advertisedPorts:
          - <port>
  ```

  ```bash
  helm upgrade --install redpanda redpanda/redpanda -n redpanda --create-namespace \
    --values custom-pandaproxy-port.yaml --reuse-values
  ```

  </TabItem>
  <TabItem value="flags" label="--set">

  ```bash
  helm upgrade --install redpanda redpanda/redpanda -n redpanda --create-namespace \
    --set "listeners.http.external.default.advertisedPorts={<port>}"
  ```

  </TabItem>
  </Tabs>

</TabItem>
<TabItem value="schema" label="Schema Registry">

  <Tabs groupId="helm-config">
  <TabItem value="values" label="--values">

  ```yaml title="custom-schema-registry-port.yaml"
  listeners:
    schemaRegistry:
      external:
        default:
          advertisedPorts:
          - <port>
  ```

  ```bash
  helm upgrade --install redpanda redpanda/redpanda -n redpanda --create-namespace \
    --values custom-schema-registry-port.yaml --reuse-values
  ```

  </TabItem>
  <TabItem value="flags" label="--set">

  ```bash
  helm upgrade --install redpanda redpanda/redpanda -n redpanda --create-namespace \
    --set "listeners.schemaRegistry.external.default.advertisedPorts={<port>}"
  ```

  </TabItem>
  </Tabs>

</TabItem>
</Tabs>

:::note
<ValuesYaml path="listeners"/>
:::

### Disable external access

You can disable external access for all listeners or for individual listeners.

<Tabs groupId="listeners">
<TabItem value="all" label="All listeners" default>

  <Tabs groupId="helm-config">
  <TabItem value="values" label="--values">

  ```yaml title="disable-external-access.yaml"
  external:
    enabled: false
  ```

  ```bash
  helm upgrade --install redpanda redpanda/redpanda -n redpanda --create-namespace \
    --values disable-external-access.yaml --reuse-values
  ```

  </TabItem>
  <TabItem value="flags" label="--set">

  ```bash
  helm upgrade --install redpanda redpanda/redpanda -n redpanda --create-namespace \
    --set external.enabled=false
  ```

  </TabItem>
  </Tabs>

</TabItem>
<TabItem value="admin" label="Admin API">

  <Tabs groupId="helm-config">
  <TabItem value="values" label="--values">

  ```yaml title="disable-external-admin-api.yaml"
  listeners:
    admin:
      external:
        default:
          enabled: false
  ```

  ```bash
  helm upgrade --install redpanda redpanda/redpanda -n redpanda --create-namespace \
    --values disable-external-admin-api.yaml --reuse-values
  ```

  </TabItem>
  <TabItem value="flags" label="--set">

  ```bash
  helm upgrade --install redpanda redpanda/redpanda -n redpanda --create-namespace \
    --set listeners.admin.external.default.enabled=false
  ```

  </TabItem>
  </Tabs>

</TabItem>
<TabItem value="kafka" label="Kafka API">

  <Tabs groupId="helm-config">
  <TabItem value="values" label="--values">

  ```yaml title="disable-external-kafka-api.yaml"
  listeners:
    kafka:
      external:
        default:
          enabled: false
  ```

  ```bash
  helm upgrade --install redpanda redpanda/redpanda -n redpanda --create-namespace \
    --values disable-external-kafka-api.yaml --reuse-values
  ```

  </TabItem>
  <TabItem value="flags" label="--set">

  ```bash
  helm upgrade --install redpanda redpanda/redpanda -n redpanda --create-namespace \
    --set listeners.kafka.external.default.enabled=false
  ```

  </TabItem>
  </Tabs>

</TabItem>
<TabItem value="proxy" label="HTTP Proxy">

  <Tabs groupId="helm-config">
  <TabItem value="values" label="--values">

  ```yaml title="disable-external-pandaproxy.yaml"
  listeners:
    http:
      external:
        default:
          enabled: false
  ```

  ```bash
  helm upgrade --install redpanda redpanda/redpanda -n redpanda --create-namespace \
    --values disable-external-pandaproxy.yaml --reuse-values
  ```

  </TabItem>
  <TabItem value="flags" label="--set">

  ```bash
  helm upgrade --install redpanda redpanda/redpanda -n redpanda --create-namespace \
    --set listeners.http.external.default.enabled=false
  ```

  </TabItem>
  </Tabs>

</TabItem>
<TabItem value="schema" label="Schema Registry">

  <Tabs groupId="helm-config">
  <TabItem value="values" label="--values">

  ```yaml title="disable-external-schema-registry.yaml"
  listeners:
    schemaRegistry:
      external:
        default:
          enabled: false
  ```

  ```bash
  helm upgrade --install redpanda redpanda/redpanda -n redpanda --create-namespace \
    --values disable-external-schema-registry.yaml --reuse-values
  ```

  </TabItem>
  <TabItem value="flags" label="--set">

  ```bash
  helm upgrade --install redpanda redpanda/redpanda -n redpanda --create-namespace \
    --set listeners.schemaRegistry.external.default.enabled=false
  ```

  </TabItem>
  </Tabs>

</TabItem>
</Tabs>

:::note
<ValuesYaml path="listeners"/>
:::

## Next steps

[Configure security](../../security) for your listeners.
